docs: update v0.30.0 story with Ed25519, MessageHeader, CompiledInstruction tests

--- a/stories/v0.30.0-integration-tests.md
+++ b/stories/v0.30.0-integration-tests.md
@@ -237,6 +237,9 @@ $ZIG build test-integration --summary all
 - [x] System 指令编码与 Rust 完全一致
 - [x] Keccak256 哈希计算与 Rust 完全一致
 - [x] ComputeBudget 指令编码与 Rust 完全一致
+- [x] Ed25519 签名验证与 Rust 完全一致
+- [x] MessageHeader 编码与 Rust 完全一致
+- [x] CompiledInstruction 编码与 Rust 完全一致
 
 ### 未实现 (低优先级)
 
@@ -264,6 +267,9 @@ $ZIG build test-integration --summary all
 - [x] System 指令测试向量 (6 个, Transfer/CreateAccount/Assign/Allocate)
 - [x] Keccak256 测试向量 (7 个, 各种输入)
 - [x] ComputeBudget 测试向量 (7 个, 所有指令类型)
+- [x] Ed25519 测试向量 (5 个, 签名验证)
+- [x] MessageHeader 测试向量 (4 个, 各种配置)
+- [x] CompiledInstruction 测试向量 (3 个, short_vec 编码)
 - [x] 边界条件和特殊值测试
 
 ## 预期收益
@@ -320,6 +326,9 @@ $ZIG build test-integration --summary all
 21. ✅ System 指令编码测试 (6 vectors, Transfer/CreateAccount/Assign/Allocate)
 22. ✅ Keccak256 哈希测试 (7 vectors, 使用 std.crypto)
 23. ✅ ComputeBudget 指令编码测试 (7 vectors, 所有指令类型)
+24. ✅ Ed25519 签名验证测试 (5 vectors, 有效/无效签名)
+25. ✅ MessageHeader 编码测试 (4 vectors, 消息头结构)
+26. ✅ CompiledInstruction 编码测试 (3 vectors, short_vec 长度前缀)
 
 ### 未实现工作 (低优先级)
 
