docs: update v0.30.0 story with FeatureState and InstructionError tests

--- a/stories/v0.30.0-integration-tests.md
+++ b/stories/v0.30.0-integration-tests.md
@@ -240,6 +240,8 @@ $ZIG build test-integration --summary all
 - [x] Ed25519 签名验证与 Rust 完全一致
 - [x] MessageHeader 编码与 Rust 完全一致
 - [x] CompiledInstruction 编码与 Rust 完全一致
+- [x] FeatureState 编码与 Rust 完全一致
+- [x] InstructionError bincode 编码与 Rust 完全一致
 
 ### 未实现 (低优先级)
 
@@ -270,6 +272,8 @@ $ZIG build test-integration --summary all
 - [x] Ed25519 测试向量 (5 个, 签名验证)
 - [x] MessageHeader 测试向量 (4 个, 各种配置)
 - [x] CompiledInstruction 测试向量 (3 个, short_vec 编码)
+- [x] FeatureState 测试向量 (4 个, 激活状态)
+- [x] InstructionError 测试向量 (6 个, bincode 编码)
 - [x] 边界条件和特殊值测试
 
 ## 预期收益
@@ -329,6 +333,8 @@ $ZIG build test-integration --summary all
 24. ✅ Ed25519 签名验证测试 (5 vectors, 有效/无效签名)
 25. ✅ MessageHeader 编码测试 (4 vectors, 消息头结构)
 26. ✅ CompiledInstruction 编码测试 (3 vectors, short_vec 长度前缀)
+27. ✅ FeatureState 编码测试 (4 vectors, 激活状态序列化)
+28. ✅ InstructionError bincode 测试 (6 vectors, 错误类型编码)
 
 ### 未实现工作 (低优先级)
 
