feat(program-test): add LoaderV4, Vote instruction and extended TransactionError tests
- Add LoaderV4 instruction encoding tests (6 vectors: Write, SetProgramLength, Deploy, Retract, TransferAuthority)
- Add Vote instruction encoding tests (6 vectors: Authorize, Withdraw, UpdateCommission, UpdateValidatorIdentity, AuthorizeChecked)
- Extend TransactionError tests from 8 to 13 vectors (add ProgramAccountNotFound, AlreadyProcessed, CallChainTooDeep, SanitizeFailure, ClusterMaintenance)
- Add solana-vote-interface dependency to Cargo.toml
- Update story documentation with new test coverage

Integration tests: 35/35 passed

--- a/stories/v0.30.0-integration-tests.md
+++ b/stories/v0.30.0-integration-tests.md
@@ -242,12 +242,18 @@ $ZIG build test-integration --summary all
 - [x] CompiledInstruction 编码与 Rust 完全一致
 - [x] FeatureState 编码与 Rust 完全一致
 - [x] InstructionError bincode 编码与 Rust 完全一致
+- [x] TransactionError bincode 编码与 Rust 完全一致
+- [x] AccountMeta bincode 编码与 Rust 完全一致
+- [x] LoaderV3 (UpgradeableLoaderInstruction) bincode 编码与 Rust 完全一致
+- [x] Blake3 哈希计算与 Rust 完全一致
+- [x] Stake 程序指令编码与 Rust 完全一致
+- [x] Address Lookup Table 指令编码与 Rust 完全一致
+- [x] LoaderV4 指令编码与 Rust 完全一致
+- [x] Vote 程序指令编码与 Rust 完全一致
 
 ### 未实现 (低优先级)
 
-- [ ] InstructionError bincode 序列化 (需要 enum 编号完全一致)
-- [ ] TransactionError bincode 序列化 (需要 enum 编号完全一致)
-- [ ] UpgradeableLoaderInstruction bincode 序列化
+- [ ] Secp256k1 签名验证
 
 ### 测试覆盖
 
@@ -274,6 +280,14 @@ $ZIG build test-integration --summary all
 - [x] CompiledInstruction 测试向量 (3 个, short_vec 编码)
 - [x] FeatureState 测试向量 (4 个, 激活状态)
 - [x] InstructionError 测试向量 (6 个, bincode 编码)
+- [x] TransactionError 测试向量 (13 个, bincode 编码，含更多变体)
+- [x] AccountMeta 测试向量 (4 个, bincode 编码)
+- [x] LoaderV3 测试向量 (7 个, UpgradeableLoaderInstruction 编码)
+- [x] LoaderV4 测试向量 (6 个, LoaderV4Instruction 编码)
+- [x] Blake3 测试向量 (7 个, 哈希计算)
+- [x] Stake 指令测试向量 (6 个, 质押程序指令编码)
+- [x] AddressLookupTable 测试向量 (5 个, 地址查找表指令编码)
+- [x] Vote 指令测试向量 (6 个, 投票程序指令编码)
 - [x] 边界条件和特殊值测试
 
 ## 预期收益
@@ -335,6 +349,15 @@ $ZIG build test-integration --summary all
 26. ✅ CompiledInstruction 编码测试 (3 vectors, short_vec 长度前缀)
 27. ✅ FeatureState 编码测试 (4 vectors, 激活状态序列化)
 28. ✅ InstructionError bincode 测试 (6 vectors, 错误类型编码)
+29. ✅ TransactionError bincode 测试 (8 vectors, 事务错误编码)
+30. ✅ AccountMeta bincode 测试 (4 vectors, 账户元数据编码)
+31. ✅ LoaderV3 instruction 测试 (7 vectors, 升级加载器指令编码)
+32. ✅ Blake3 hash 测试 (7 vectors, 使用 std.crypto.hash.Blake3)
+33. ✅ Stake instruction 测试 (6 vectors, 质押程序指令编码)
+34. ✅ AddressLookupTable instruction 测试 (5 vectors, 地址查找表指令编码)
+35. ✅ LoaderV4 instruction 测试 (6 vectors, LoaderV4 指令编码)
+36. ✅ Vote instruction 测试 (6 vectors, 投票程序指令编码)
+37. ✅ 扩展 TransactionError 测试 (13 vectors, 包含更多错误变体)
 
 ### 未实现工作 (低优先级)
 
