feat(program-test): add Message serialization and System nonce instruction tests
- Add Message serialization tests (3 vectors: simple_transfer, empty_message, multi_instruction)
- Add System instruction nonce variants (3 vectors: AdvanceNonce, WithdrawNonce, AuthorizeNonce)
- Add solana-message dependency to Cargo.toml
- Update story documentation with new test coverage

Integration tests: 36/36 passed, 199 total vectors

--- a/stories/v0.30.0-integration-tests.md
+++ b/stories/v0.30.0-integration-tests.md
@@ -288,6 +288,8 @@ $ZIG build test-integration --summary all
 - [x] Stake 指令测试向量 (6 个, 质押程序指令编码)
 - [x] AddressLookupTable 测试向量 (5 个, 地址查找表指令编码)
 - [x] Vote 指令测试向量 (6 个, 投票程序指令编码)
+- [x] Message 序列化测试向量 (3 个, 完整消息编码)
+- [x] System 指令 Nonce 变体 (3 个, AdvanceNonce/WithdrawNonce/AuthorizeNonce)
 - [x] 边界条件和特殊值测试
 
 ## 预期收益
@@ -358,6 +360,8 @@ $ZIG build test-integration --summary all
 35. ✅ LoaderV4 instruction 测试 (6 vectors, LoaderV4 指令编码)
 36. ✅ Vote instruction 测试 (6 vectors, 投票程序指令编码)
 37. ✅ 扩展 TransactionError 测试 (13 vectors, 包含更多错误变体)
+38. ✅ Message 序列化测试 (3 vectors, 完整消息编码)
+39. ✅ System 指令 Nonce 变体测试 (3 vectors, AdvanceNonce/WithdrawNonce/AuthorizeNonce)
 
 ### 未实现工作 (低优先级)
 
