feat(program-test): add Transaction serialization and Sysvar ID tests
- Add Transaction serialization tests (2 vectors: signed_transfer, empty_unsigned)
- Add Sysvar ID Base58 encoding tests (10 vectors: clock, epoch_schedule, fees, instructions, recent_blockhashes, rent, slot_hashes, slot_history, epoch_rewards, last_restart_slot)
- Update story documentation

Integration tests: 38/38 passed, 217 total vectors across 35 files

--- a/stories/v0.30.0-integration-tests.md
+++ b/stories/v0.30.0-integration-tests.md
@@ -290,6 +290,8 @@ $ZIG build test-integration --summary all
 - [x] Vote 指令测试向量 (6 个, 投票程序指令编码)
 - [x] Message 序列化测试向量 (3 个, 完整消息编码)
 - [x] System 指令 Nonce 变体 (3 个, AdvanceNonce/WithdrawNonce/AuthorizeNonce)
+- [x] Transaction 序列化测试向量 (2 个, 签名交易编码)
+- [x] Sysvar ID 测试向量 (10 个, 系统变量地址验证)
 - [x] 边界条件和特殊值测试
 
 ## 预期收益
@@ -362,6 +364,8 @@ $ZIG build test-integration --summary all
 37. ✅ 扩展 TransactionError 测试 (13 vectors, 包含更多错误变体)
 38. ✅ Message 序列化测试 (3 vectors, 完整消息编码)
 39. ✅ System 指令 Nonce 变体测试 (3 vectors, AdvanceNonce/WithdrawNonce/AuthorizeNonce)
+40. ✅ Transaction 序列化测试 (2 vectors, 签名交易编码)
+41. ✅ Sysvar ID 测试 (10 vectors, 系统变量地址 Base58 验证)
 
 ### 未实现工作 (低优先级)
 
