feat(program-test): add Native Program ID and Secp256k1 instruction tests
- Add native_program_id_vectors with 12 program IDs (System, BPF Loaders,
  Vote, Stake, Config, Ed25519, Secp256k1, ComputeBudget, ALT, LoaderV4)
- Add secp256k1_instruction_vectors with 6 signature offset test cases
- Update story documentation with new tests

Test results: 37 vector files, 235 vectors, 40/40 integration tests passed

--- a/stories/v0.30.0-integration-tests.md
+++ b/stories/v0.30.0-integration-tests.md
@@ -250,10 +250,13 @@ $ZIG build test-integration --summary all
 - [x] Address Lookup Table 指令编码与 Rust 完全一致
 - [x] LoaderV4 指令编码与 Rust 完全一致
 - [x] Vote 程序指令编码与 Rust 完全一致
+- [x] Sysvar ID Base58 编码与 Rust 完全一致
+- [x] Native Program ID Base58 编码与 Rust 完全一致
+- [x] Secp256k1 指令偏移序列化与 Rust 完全一致
 
 ### 未实现 (低优先级)
 
-- [ ] Secp256k1 签名验证
+- [ ] Secp256k1 完整签名验证 (需要更多 keccak256 支持)
 
 ### 测试覆盖
 
@@ -292,6 +295,8 @@ $ZIG build test-integration --summary all
 - [x] System 指令 Nonce 变体 (3 个, AdvanceNonce/WithdrawNonce/AuthorizeNonce)
 - [x] Transaction 序列化测试向量 (2 个, 签名交易编码)
 - [x] Sysvar ID 测试向量 (10 个, 系统变量地址验证)
+- [x] Native Program ID 测试向量 (12 个, 原生程序地址验证)
+- [x] Secp256k1 指令偏移测试向量 (6 个, 签名偏移序列化)
 - [x] 边界条件和特殊值测试
 
 ## 预期收益
@@ -320,7 +325,7 @@ $ZIG build test-integration --summary all
 ## 完成状态
 
 - 开始日期: 2026-01-06
-- 完成日期: 2026-01-06
+- 完成日期: 2026-01-07
 - 当前状态: ✅ 已完成
 
 ### 已完成工作
@@ -366,6 +371,8 @@ $ZIG build test-integration --summary all
 39. ✅ System 指令 Nonce 变体测试 (3 vectors, AdvanceNonce/WithdrawNonce/AuthorizeNonce)
 40. ✅ Transaction 序列化测试 (2 vectors, 签名交易编码)
 41. ✅ Sysvar ID 测试 (10 vectors, 系统变量地址 Base58 验证)
+42. ✅ Native Program ID 测试 (12 vectors, 原生程序地址 Base58 验证)
+43. ✅ Secp256k1 指令偏移测试 (6 vectors, 签名偏移序列化)
 
 ### 未实现工作 (低优先级)
 
