feat(program-test): add sysvar and precompile instruction tests
- Add SlotHash serialization tests (4 vectors)
- Add EpochRewards sysvar state tests (4 vectors)
- Add LastRestartSlot sysvar tests (4 vectors)
- Add Secp256r1 (P-256) instruction offset tests (5 vectors)
- Add FeatureGate instruction parameter tests (4 vectors)
- Add ProgramData (BPF Loader Upgradeable) header tests (4 vectors)
- Add new Rust dependencies: slot-hashes, epoch-rewards, last-restart-slot, secp256r1-program

Test results: 43 vector files, 260 vectors, 46/46 integration tests passed

--- a/stories/v0.30.0-integration-tests.md
+++ b/stories/v0.30.0-integration-tests.md
@@ -297,6 +297,12 @@ $ZIG build test-integration --summary all
 - [x] Sysvar ID 测试向量 (10 个, 系统变量地址验证)
 - [x] Native Program ID 测试向量 (12 个, 原生程序地址验证)
 - [x] Secp256k1 指令偏移测试向量 (6 个, 签名偏移序列化)
+- [x] SlotHash 测试向量 (4 个, slot hash 序列化)
+- [x] EpochRewards 测试向量 (4 个, epoch 奖励状态序列化)
+- [x] LastRestartSlot 测试向量 (4 个, 最后重启槽序列化)
+- [x] Secp256r1 指令偏移测试向量 (5 个, P-256 签名偏移序列化)
+- [x] FeatureGate 指令测试向量 (4 个, 功能激活参数)
+- [x] ProgramData 测试向量 (4 个, BPF Loader Upgradeable 头序列化)
 - [x] 边界条件和特殊值测试
 
 ## 预期收益
@@ -373,6 +379,12 @@ $ZIG build test-integration --summary all
 41. ✅ Sysvar ID 测试 (10 vectors, 系统变量地址 Base58 验证)
 42. ✅ Native Program ID 测试 (12 vectors, 原生程序地址 Base58 验证)
 43. ✅ Secp256k1 指令偏移测试 (6 vectors, 签名偏移序列化)
+44. ✅ SlotHash 序列化测试 (4 vectors, slot hash 数据结构)
+45. ✅ EpochRewards 序列化测试 (4 vectors, epoch 奖励状态)
+46. ✅ LastRestartSlot 序列化测试 (4 vectors, 最后重启槽)
+47. ✅ Secp256r1 指令偏移测试 (5 vectors, P-256 签名偏移)
+48. ✅ FeatureGate 指令测试 (4 vectors, 功能激活参数)
+49. ✅ ProgramData 头序列化测试 (4 vectors, BPF Loader Upgradeable)
 
 ### 未实现工作 (低优先级)
 
