feat(program-test): add Ed25519, ALT state and versioned message tests
- Add Ed25519 instruction offset serialization tests (6 vectors)
- Add System instruction WithSeed variants tests (4 vectors)
- Add Address Lookup Table state serialization tests (4 vectors)
- Add Versioned Message v0 prefix format tests (4 vectors)
- Update story documentation with new test entries

Test results: 47 vector files, 278 vectors, 50/50 integration tests passed

--- a/stories/v0.30.0-integration-tests.md
+++ b/stories/v0.30.0-integration-tests.md
@@ -303,6 +303,10 @@ $ZIG build test-integration --summary all
 - [x] Secp256r1 指令偏移测试向量 (5 个, P-256 签名偏移序列化)
 - [x] FeatureGate 指令测试向量 (4 个, 功能激活参数)
 - [x] ProgramData 测试向量 (4 个, BPF Loader Upgradeable 头序列化)
+- [x] Ed25519 指令偏移测试向量 (6 个, Ed25519 签名验证指令格式)
+- [x] System 指令扩展测试向量 (4 个, WithSeed 变体序列化)
+- [x] Address Lookup Table 状态测试向量 (4 个, ALT 状态序列化)
+- [x] Versioned Message 测试向量 (4 个, v0 消息前缀格式)
 - [x] 边界条件和特殊值测试
 
 ## 预期收益
@@ -385,6 +389,10 @@ $ZIG build test-integration --summary all
 47. ✅ Secp256r1 指令偏移测试 (5 vectors, P-256 签名偏移)
 48. ✅ FeatureGate 指令测试 (4 vectors, 功能激活参数)
 49. ✅ ProgramData 头序列化测试 (4 vectors, BPF Loader Upgradeable)
+50. ✅ Ed25519 指令偏移测试 (6 vectors, Ed25519 签名验证指令格式)
+51. ✅ System 指令扩展测试 (4 vectors, WithSeed 变体序列化)
+52. ✅ Address Lookup Table 状态测试 (4 vectors, ALT 状态序列化)
+53. ✅ Versioned Message 测试 (4 vectors, v0 消息前缀格式)
 
 ### 未实现工作 (低优先级)
 
