feat(client): implement Solana RPC client SDK with P0+P1 methods (24/52)
Implement a complete Solana RPC Client SDK for off-chain development:

Infrastructure:
- client/src/error.zig: ClientError, RpcError types
- client/src/commitment.zig: Commitment levels (processed, confirmed, finalized)
- client/src/types.zig: Response types (AccountInfo, Block, Transaction, etc.)
- client/src/json_rpc.zig: JSON-RPC 2.0 client with HTTP transport
- client/src/rpc_client.zig: Main RpcClient with 24 RPC methods

P0 Core Methods (6/6):
- getBalance, getAccountInfo, getLatestBlockhash
- getMinimumBalanceForRentExemption, sendTransaction, getSignatureStatuses

P1 Common Methods (18/18):
- getMultipleAccounts, getProgramAccounts, getTransaction
- simulateTransaction, requestAirdrop, getTokenAccountBalance
- getTokenAccountsByOwner, isBlockhashValid, getEpochInfo
- getSlot, getBlockHeight, getHealth, getVersion
- getFeeForMessage, getRecentPrioritizationFees
- getSignaturesForAddress, getTokenSupply, getBlock

Tests: 32 client tests pass, 300 total project tests pass

--- a/stories/v1.1.0-client-sdk.md
+++ b/stories/v1.1.0-client-sdk.md
@@ -180,26 +180,43 @@ client/
 
 ## 验收标准
 
-### Phase 1: 基础设施 ⏳
-- [ ] 创建 `client/` 目录结构
-- [ ] 实现 `error.zig` - ClientError, RpcError
-- [ ] 实现 `types.zig` - Response<T>, RpcResponseContext
-- [ ] 实现 `commitment.zig` - CommitmentConfig
-- [ ] 实现 `json_rpc.zig` - HTTP JSON-RPC 客户端
-- [ ] 基础测试通过
+### Phase 1: 基础设施 ✅
+- [x] 创建 `client/` 目录结构
+- [x] 实现 `error.zig` - ClientError, RpcError
+- [x] 实现 `types.zig` - Response<T>, RpcResponseContext
+- [x] 实现 `commitment.zig` - CommitmentConfig
+- [x] 实现 `json_rpc.zig` - HTTP JSON-RPC 客户端
+- [x] 基础测试通过
 
-### Phase 2: P0 核心 ⏳
-- [ ] `getBalance`
-- [ ] `getAccountInfo`
-- [ ] `getLatestBlockhash`
-- [ ] `getMinimumBalanceForRentExemption`
-- [ ] `sendTransaction`
-- [ ] `getSignatureStatuses`
+### Phase 2: P0 核心 ✅
+- [x] `getBalance`
+- [x] `getAccountInfo`
+- [x] `getLatestBlockhash`
+- [x] `getMinimumBalanceForRentExemption`
+- [x] `sendTransaction`
+- [x] `getSignatureStatuses`
 - [ ] 端到端测试 (devnet)
 
-### Phase 3: P1 常用 ⏳
-- [ ] 18 个 P1 方法全部实现
-- [ ] 测试覆盖
+### Phase 3: P1 常用 ✅
+- [x] `getMultipleAccounts`
+- [x] `getProgramAccounts`
+- [x] `getTransaction`
+- [x] `simulateTransaction`
+- [x] `requestAirdrop`
+- [x] `getTokenAccountBalance`
+- [x] `getTokenAccountsByOwner`
+- [x] `isBlockhashValid`
+- [x] `getEpochInfo`
+- [x] `getSlot`
+- [x] `getHealth`
+- [x] `getVersion`
+- [x] `getFeeForMessage`
+- [x] `getRecentPrioritizationFees`
+- [x] `getSignaturesForAddress`
+- [x] `getTokenSupply`
+- [x] `getBlock`
+- [x] `getBlockHeight`
+- [x] 测试覆盖
 
 ### Phase 4: P2 完整 ⏳
 - [ ] 剩余方法实现
@@ -283,4 +300,4 @@ pub const RpcErrorInfo = struct {
 
 - 开始日期: 2026-01-06
 - 完成日期: -
-- 当前状态: ⏳ 规划中
+- 当前状态: 🔨 进行中 (Phase 1-3 完成, P0+P1 共 24 个方法已实现)
