--- a/stories/v1.1.0-client-sdk.md
+++ b/stories/v1.1.0-client-sdk.md
@@ -218,14 +218,19 @@ client/
 - [x] `getBlockHeight`
 - [x] 测试覆盖
 
-### Phase 4: P2 完整 ⏳
-- [ ] 剩余方法实现
-- [ ] 52 个方法全部覆盖
-- [ ] 完整测试
+### Phase 4: P2 完整 ✅
+- [x] 剩余方法实现
+- [x] 52 个方法全部覆盖
+- [x] 完整测试
 
-### Phase 5: 便捷方法 ⏳
-- [ ] `_with_commitment` 变体
-- [ ] 辅助方法 (send_and_confirm 等)
+### Phase 5: 便捷方法 ✅
+- [x] `_with_commitment` 变体 (已在 P0-P2 中实现)
+- [x] `sendAndConfirmTransaction` - 发送并等待确认
+- [x] `confirmTransaction` - 等待交易确认
+- [x] `pollForSignatureStatus` - 轮询签名状态
+- [x] `getNewBlockhash` - 获取新的区块哈希
+- [x] `isHealthy` - 检查节点健康状态
+- [x] `getBalanceInSol` - 获取 SOL 余额（非 lamports）
 
 ## 技术设计
 
@@ -300,4 +305,4 @@ pub const RpcErrorInfo = struct {
 
 - 开始日期: 2026-01-06
 - 完成日期: -
-- 当前状态: 🔨 进行中 (Phase 1-3 完成, P0+P1 共 24 个方法已实现)
+- 当前状态: 🔨 进行中 (Phase 1-5 完成, 52/52 RPC 方法 + 便捷方法已实现)
