feat(client): add WebSocket PubSub subscription client (v1.2.0)
- Add pubsub module with 9 subscription methods:
  - accountSubscribe/Unsubscribe
  - blockSubscribe/Unsubscribe
  - logsSubscribe/Unsubscribe
  - programSubscribe/Unsubscribe
  - rootSubscribe/Unsubscribe
  - signatureSubscribe/Unsubscribe
  - slotSubscribe/Unsubscribe
  - slotsUpdatesSubscribe/Unsubscribe
  - voteSubscribe/Unsubscribe
- Add notification types (SlotInfo, UiAccount, RpcLogsResponse, etc.)
- Add websocket.zig dependency for WebSocket protocol support
- Update documentation (ROADMAP.md, CHANGELOG.md, stories/)

Client SDK tests: 102 passed (was 91, +11 PubSub tests)

--- a/stories/v0.29.0-program-sdk-completion.md
+++ b/stories/v0.29.0-program-sdk-completion.md
@@ -22,16 +22,16 @@
 
 | 指令 | 说明 | 状态 |
 |------|------|------|
-| `InitializeBuffer` | 初始化 Buffer 账户 | ⏳ |
-| `Write` | 写入程序数据到 Buffer | ⏳ |
-| `DeployWithMaxDataLen` | 部署可升级程序 | ⏳ |
-| `Upgrade` | 升级程序 | ⏳ |
-| `SetAuthority` | 设置权限 | ⏳ |
-| `Close` | 关闭账户 | ⏳ |
-| `ExtendProgram` | 扩展程序数据 | ⏳ |
-| `SetAuthorityChecked` | 设置权限（需签名） | ⏳ |
-| `Migrate` | 迁移到 loader-v4 | ⏳ |
-| `ExtendProgramChecked` | 扩展程序（需签名） | ⏳ |
+| `InitializeBuffer` | 初始化 Buffer 账户 | ✅ |
+| `Write` | 写入程序数据到 Buffer | ✅ |
+| `DeployWithMaxDataLen` | 部署可升级程序 | ✅ |
+| `Upgrade` | 升级程序 | ✅ |
+| `SetAuthority` | 设置权限 | ✅ |
+| `Close` | 关闭账户 | ✅ |
+| `ExtendProgram` | 扩展程序数据 | ✅ |
+| `SetAuthorityChecked` | 设置权限（需签名） | ✅ |
+| `Migrate` | 迁移到 loader-v4 | ✅ |
+| `ExtendProgramChecked` | 扩展程序（需签名） | ✅ |
 
 ### instruction_error.zig
 
@@ -121,27 +121,27 @@ pub const EpochInfo = struct {
 - [ ] 集中定义所有程序 ID 常量 (可选)
 - [ ] 分类组织（system, loaders, sysvars, native programs）(可选)
 
-### Phase 6: 文档更新
+### Phase 6: 文档更新 ✅
 
-- [ ] 更新 ROADMAP.md
-- [ ] 更新 CHANGELOG.md
-- [ ] 更新 README.md（如需要）
+- [x] 更新 ROADMAP.md
+- [x] 更新 CHANGELOG.md
+- [x] 更新 README.md（如需要）
 
 ## 实现步骤
 
-### Step 1: 文档准备 ⏳
+### Step 1: 文档准备 ✅
 - [x] 创建本 Story 文件
-- [ ] 更新 ROADMAP.md
+- [x] 更新 ROADMAP.md
 
-### Step 2: Phase 1 实施
-- [ ] 扩展 `bpf_loader.zig`
-- [ ] 运行测试验证
-- [ ] 提交: "feat(bpf_loader): add loader-v3 instruction builders"
+### Step 2: Phase 1 实施 ✅
+- [x] 扩展 `bpf_loader.zig`
+- [x] 运行测试验证
+- [x] 提交: "feat(bpf_loader): add loader-v3 instruction builders"
 
 ### Step 3: Phase 2 实施 ✅
 - [x] 创建 `instruction_error.zig`
 - [x] 运行测试验证 (SDK: 105→111 tests)
-- [ ] 提交: "feat(sdk): add InstructionError type"
+- [x] 提交: "feat(sdk): add InstructionError type"
 
 ### Step 4: Phase 3-5 实施 ✅
 - [x] 创建 `transaction_error.zig` (10 tests)
@@ -149,10 +149,10 @@ pub const EpochInfo = struct {
 - [x] 扩展 `bpf_loader.zig` with instructions (15 tests)
 - [x] 运行测试验证: SDK 132 tests, Program SDK 300 tests
 
-### Step 5: 文档收尾
-- [ ] 更新 ROADMAP.md 状态
-- [ ] 更新 CHANGELOG.md
-- [ ] 提交所有更改
+### Step 5: 文档收尾 ✅
+- [x] 更新 ROADMAP.md 状态
+- [x] 更新 CHANGELOG.md
+- [x] 提交所有更改
 
 ## 模块放置决策
 
