--- a/stories/v1.0.0-sdk-restructure.md
+++ b/stories/v1.0.0-sdk-restructure.md
@@ -89,12 +89,12 @@
 
 | 模块 | 说明 | 状态 |
 |------|------|------|
-| `rpc/client.zig` | JSON-RPC Client | ⏳ 待实现 |
-| `rpc/types.zig` | RPC 类型定义 | ⏳ 待实现 |
-| `connection.zig` | Connection API | ⏳ 待实现 |
-| `transaction/builder.zig` | 交易构建器 | ⏳ 待实现 |
-| `transaction/signer.zig` | 交易签名 | ⏳ 待实现 |
-| `wallet/keypair.zig` | 完整 Keypair (含签名) | ⏳ 待实现 |
+| `rpc/client.zig` | JSON-RPC Client | ✅ 已完成 (v1.1.0) |
+| `rpc/types.zig` | RPC 类型定义 | ✅ 已完成 (v1.1.0) |
+| `connection.zig` | Connection API | ✅ 已完成 (v1.1.0) |
+| `transaction/builder.zig` | 交易构建器 | ✅ 已完成 (v1.1.0) |
+| `transaction/signer.zig` | 交易签名 | ✅ 已完成 (v1.1.0) |
+| `wallet/keypair.zig` | 完整 Keypair (含签名) | ✅ 已完成 (sdk/) |
 
 ## 验收标准
 
@@ -122,13 +122,13 @@
 - [x] 功能行为与重构前一致
 - [x] 导出 `solana_sdk` 模块供消费者选择使用
 
-### Phase 3: 创建 solana-client-sdk-zig (后续)
+### Phase 3: 创建 solana-client-sdk-zig ✅
 
-- [ ] 创建 `client/` 目录结构
-- [ ] 实现 RPC Client
-- [ ] 实现 Connection API
-- [ ] 实现交易构建器
-- [ ] 添加测试
+- [x] 创建 `client/` 目录结构
+- [x] 实现 RPC Client (52 个方法)
+- [x] 实现 Connection API
+- [x] 实现交易构建器
+- [x] 添加测试 (108 tests)
 
 ## 实现步骤
 
@@ -155,11 +155,12 @@
 - [x] 测试完整功能 (SDK: 105, Program: 286, Total: 391)
 - [x] 提交: "refactor: complete SDK extraction with proper module imports"
 
-### Step 4: Phase 3 实施 (后续)
-- [ ] 创建 client 目录
-- [ ] 实现 RPC client
-- [ ] 测试
-- [ ] 提交: "feat: add client SDK"
+### Step 4: Phase 3 实施 ✅
+- [x] 创建 client 目录
+- [x] 实现 RPC client (52 个方法)
+- [x] 实现 transaction builder 和 signer
+- [x] 测试 (108 tests)
+- [x] 提交: "feat: add client SDK" (参见 v1.1.0)
 
 ## 风险评估
 
@@ -173,5 +174,5 @@
 ## 完成状态
 
 - 开始日期: 2026-01-06
-- 完成日期: 2026-01-06
-- 当前状态: ✅ Phase 1 & 2 完成 (Phase 3 Client SDK 待后续实现)
+- 完成日期: 2026-01-07
+- 当前状态: ✅ 已完成 (Phase 1, 2, 3 全部完成)
