refactor(anchor): split subpackage and quiet rent defaults

--- a/anchor/stories/v3.0.0-anchor-phase1.md
+++ b/anchor/stories/v3.0.0-anchor-phase1.md
@@ -15,7 +15,7 @@
 
 ## 验收标准
 
-### src/anchor/discriminator.zig
+### anchor/src/discriminator.zig
 
 - [x] `DISCRIMINATOR_LENGTH` 常量 (8 bytes)
 - [x] `Discriminator` 类型 ([8]u8)
@@ -25,7 +25,7 @@
 - [x] 编译期计算 (comptime)
 - [x] 单元测试
 
-### src/anchor/error.zig
+### anchor/src/error.zig
 
 - [x] `AnchorError` 枚举
   - [x] Instruction errors (100-199)
@@ -54,7 +54,7 @@
 - [x] `message()` 获取错误消息
 - [x] 单元测试
 
-### src/anchor/constraints.zig
+### anchor/src/constraints.zig
 
 - [x] `Constraints` 结构体
   - [x] `mut: bool` - 账户必须可写
@@ -68,7 +68,7 @@
 - [x] `ConstraintError` 错误类型
 - [x] 单元测试
 
-### src/anchor/account.zig
+### anchor/src/account.zig
 
 - [x] `AccountConfig` 配置结构体
   - [x] `discriminator: Discriminator` - 8 字节标识符
@@ -89,7 +89,7 @@
 - [x] `AccountError` 错误类型
 - [x] 单元测试
 
-### src/anchor/signer.zig
+### anchor/src/signer.zig
 
 - [x] `Signer` 结构体
   - [x] `info` 字段
@@ -103,7 +103,7 @@
 - [x] `SignerError` 错误类型
 - [x] 单元测试
 
-### src/anchor/program.zig
+### anchor/src/program.zig
 
 - [x] `Program(expected_id)` 泛型类型
   - [x] `ID` 常量 - 编译期程序 ID
@@ -115,7 +115,7 @@
 - [x] `ProgramError` 错误类型
 - [x] 单元测试
 
-### src/anchor/context.zig
+### anchor/src/context.zig
 
 - [x] `Bumps` 结构体
   - [x] 存储 PDA bump seeds
@@ -132,7 +132,7 @@
 - [x] `ContextError` 错误类型
 - [x] 单元测试
 
-### src/anchor/root.zig
+### anchor/src/root.zig
 
 - [x] 导出所有子模块
 - [x] 导出常用类型和函数
@@ -142,7 +142,7 @@
 
 ### 集成
 
-- [x] `src/root.zig` 添加 `pub const anchor = @import("anchor/root.zig");`
+- [x] `anchor/src/root.zig` 导出所有模块
 - [x] 所有测试通过
 
 ## Rust 源码引用
@@ -201,8 +201,8 @@ Range       | Category
 ## 使用示例
 
 ```zig
-const sol = @import("sol");
-const anchor = sol.anchor;
+const sol = @import("solana_program_sdk");
+const anchor = @import("sol_anchor_zig");
 
 // 定义账户数据
 const CounterData = struct {
