--- a/anchor/stories/v3.0.0-anchor-phase2.md
+++ b/anchor/stories/v3.0.0-anchor-phase2.md
@@ -13,7 +13,7 @@
 
 ## 验收标准
 
-### src/anchor/seeds.zig
+### anchor/src/seeds.zig
 
 - [x] `SeedSpec` 联合类型
   - [x] `literal` - 字面量字节 (字符串常量)
@@ -33,7 +33,7 @@
 - [x] `fieldNameHash()` - 字段名哈希
 - [x] 单元测试
 
-### src/anchor/pda.zig
+### anchor/src/pda.zig
 
 - [x] `validatePda(account_key, seeds, program_id)` - 验证 PDA
 - [x] `validatePdaWithBump(account_key, seeds, bump, program_id)` - 使用已知 bump 验证
@@ -49,7 +49,7 @@
   - [x] MaxSeedLengthExceeded
 - [x] 单元测试
 
-### src/anchor/init.zig
+### anchor/src/init.zig
 
 - [x] `InitConfig` 配置结构体
   - [x] `space: usize` - 账户大小
@@ -64,7 +64,7 @@
 - [x] `InitError` 错误类型
 - [x] 单元测试
 
-### src/anchor/account.zig 扩展
+### anchor/src/account.zig 扩展
 
 - [x] `AccountConfig` 新增字段
   - [x] `seeds: ?[]const SeedSpec` - PDA 种子规范
@@ -86,7 +86,7 @@
   - [x] `requiresInit()` - 检查是否需要初始化
 - [x] 单元测试
 
-### src/anchor/context.zig 扩展
+### anchor/src/context.zig 扩展
 
 - [x] `Bumps` 增强
   - [x] `MAX_BUMPS` 常量 (16)
@@ -105,7 +105,7 @@
   - [x] `LoadAccountsResult` - 返回账户和 bumps 的辅助类型
 - [x] 单元测试
 
-### src/anchor/root.zig
+### anchor/src/root.zig
 
 - [x] 导出 seeds 模块
 - [x] 导出 pda 模块
@@ -209,8 +209,8 @@ const counter = try Counter.loadWithPdaBump(&info, .{"counter"}, 254, &program_i
 ### 基本 PDA 账户
 
 ```zig
-const anchor = @import("sol").anchor;
-const sol = @import("sol");
+const sol = @import("solana_program_sdk");
+const anchor = @import("sol_anchor_zig");
 
 // 定义 PDA 账户数据
 const CounterData = struct {
