--- a/anchor/stories/v3.0.0-anchor-phase3.md
+++ b/anchor/stories/v3.0.0-anchor-phase3.md
@@ -12,7 +12,7 @@
 
 ## 验收标准
 
-### src/anchor/has_one.zig
+### anchor/src/has_one.zig
 
 - [x] `HasOneSpec` 结构体
   - [x] `field: []const u8` - 账户数据中的字段名
@@ -24,7 +24,7 @@
 - [x] `HasOneError` 错误类型
 - [x] 单元测试 (8 tests)
 
-### src/anchor/close.zig
+### anchor/src/close.zig
 
 - [x] `CloseError` 错误类型
   - [x] `AccountNotWritable` - 账户不可写
@@ -39,7 +39,7 @@
 - [x] `isClosed` - 检查是否已关闭
 - [x] 单元测试 (8 tests)
 
-### src/anchor/realloc.zig
+### anchor/src/realloc.zig
 
 - [x] `ReallocError` 错误类型
   - [x] `AccountNotWritable` - 账户不可写
@@ -60,7 +60,7 @@
 - [x] `validateRealloc` - 验证重分配操作
 - [x] 单元测试 (13 tests)
 
-### src/anchor/account.zig 扩展
+### anchor/src/account.zig 扩展
 
 - [x] `AccountConfig` 新增字段
   - [x] `has_one: ?[]const HasOneSpec` - has_one 约束规范
@@ -72,7 +72,7 @@
 - [x] 编译期配置验证
 - [x] 单元测试
 
-### src/anchor/root.zig
+### anchor/src/root.zig
 
 - [x] 导出 has_one 模块
 - [x] 导出 close 模块
@@ -191,8 +191,8 @@ const Dynamic = anchor.Account(Data, .{
 ### has_one 约束
 
 ```zig
-const anchor = @import("sol").anchor;
-const sol = @import("sol");
+const sol = @import("solana_program_sdk");
+const anchor = @import("sol_anchor_zig");
 
 // 账户数据带 authority 字段
 const VaultData = struct {
