feat(anchor): re-export sdk for convenience

--- a/anchor/stories/v3.0.0-anchor-phase2.md
+++ b/anchor/stories/v3.0.0-anchor-phase2.md
@@ -209,8 +209,8 @@ const counter = try Counter.loadWithPdaBump(&info, .{"counter"}, 254, &program_i
 ### 基本 PDA 账户
 
 ```zig
-const sol = @import("solana_program_sdk");
 const anchor = @import("sol_anchor_zig");
+const sol = anchor.sdk;
 
 // 定义 PDA 账户数据
 const CounterData = struct {
