--- a/anchor/stories/v3.0.0-anchor-phase1.md
+++ b/anchor/stories/v3.0.0-anchor-phase1.md
@@ -201,8 +201,8 @@ Range       | Category
 ## 使用示例
 
 ```zig
-const sol = @import("solana_program_sdk");
 const anchor = @import("sol_anchor_zig");
+const sol = anchor.sdk;
 
 // 定义账户数据
 const CounterData = struct {
