--- a/anchor/stories/v3.0.0-anchor-phase3.md
+++ b/anchor/stories/v3.0.0-anchor-phase3.md
@@ -191,8 +191,8 @@ const Dynamic = anchor.Account(Data, .{
 ### has_one 约束
 
 ```zig
-const sol = @import("solana_program_sdk");
 const anchor = @import("sol_anchor_zig");
+const sol = anchor.sdk;
 
 // 账户数据带 authority 字段
 const VaultData = struct {
