feat(anchor): extend accounts derive shape inference

--- a/stories/v3.2.28-accounts-derive-token-mint-ata-shapes.md
+++ b/stories/v3.2.28-accounts-derive-token-mint-ata-shapes.md
@@ -11,7 +11,7 @@
 ### anchor/src/dsl.zig
 
 - [x] AccountsDerive infers associated token constraints from account data shape
-- [x] AccountsDerive infers mint authority/freeze/decimals from account data shape
+- [x] AccountsDerive infers mint authority/freeze and DECIMALS from account data shape
 - [x] Tests cover token/mint/ata shape inference
 
 ### docs
