feat(anchor): tighten associated token checks

--- a/stories/v3.2.49-anchor-constraint-associated-token-runtime.md
+++ b/stories/v3.2.49-anchor-constraint-associated-token-runtime.md
@@ -6,13 +6,14 @@
 
 - Enforce associated token address derivation.
 - Validate token owner field matches authority.
-- Respect optional token_program in associated token config.
+- Validate token program owner (default or custom).
 
 ## Acceptance Criteria
 
 ### anchor/src/account.zig
 
 - [x] Associated token constraints validate ATA address and token owner field.
+- [x] Associated token constraints validate token program owner.
 - [x] Tests cover associated token runtime validation.
 
 ### Documentation
