--- a/stories/v3.2.50-accounts-derive-token-alias-expansion.md
+++ b/stories/v3.2.50-accounts-derive-token-alias-expansion.md
@@ -5,6 +5,7 @@
 ## Goals
 
 - Add more token mint/authority alias names for auto inference.
+- Support `sysvar_` prefix for sysvar auto binding.
 - Add tests to confirm alias resolution.
 - Sync docs and roadmap.
 
@@ -13,6 +14,7 @@
 ### anchor/src/dsl.zig
 
 - [x] Expand token/mint/authority alias lists.
+- [x] Support `sysvar_` prefix in sysvar auto binding.
 - [x] Tests cover new alias inference.
 
 ### Documentation
