feat(anchor): enforce default token program owner

--- a/stories/v3.2.48-anchor-constraint-token-mint-runtime.md
+++ b/stories/v3.2.48-anchor-constraint-token-mint-runtime.md
@@ -6,7 +6,7 @@
 
 - Enforce `token::mint` and `token::authority` using token account state.
 - Enforce `mint::authority`, `mint::freeze_authority`, and `mint::decimals` using mint state.
-- Validate token/mint program owner constraints.
+- Validate token/mint program owner constraints (default or custom program).
 
 ## Acceptance Criteria
 
@@ -14,6 +14,7 @@
 
 - [x] Token constraints check token account state and program owner.
 - [x] Mint constraints check mint state and program owner.
+- [x] Default token program owner is enforced when custom program not set.
 - [x] Tests cover token and mint constraint validation.
 
 ### Documentation
