feat(anchor): expand token key/address aliases

--- a/stories/v3.2.50-accounts-derive-token-alias-expansion.md
+++ b/stories/v3.2.50-accounts-derive-token-alias-expansion.md
@@ -6,6 +6,7 @@
 
 - Add more token mint/authority alias names for auto inference.
 - Support `sysvar_` prefix for sysvar auto binding.
+- Cover key/address-style alias names for token mint/authority.
 - Add tests to confirm alias resolution.
 - Sync docs and roadmap.
 
